requires the data modules in glob

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
+    "glob": "^7.1.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "require-dir": "^0.3.2"
+    "require-dir": "^0.3.2",
+    "require-glob": "^3.2.0"
   }
 }
