starts handlebars templating

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
     "glob": "^7.1.2",
+    "handlebars": "^4.0.10",
+    "pug": "^2.0.0-rc.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "require-dir": "^0.3.2",
